# libigl

./: CMakeLists.txt
cmake/: LibiglFolders.cmake
csharp_bindings/: CMakeLists.txt
csharp_bindings/iglu/: .gitignore  CMakeLists.txt  bindings.i  main.cpp
